--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,6 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
       - master
 
 jobs:
@@ -27,3 +26,4 @@ jobs:
         with:
           context: .
           push: true
+          tag: ${{ github.repository_owner }}/backend:latest
