--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           context: .
           push: true
-          tag: ${{ github.repository_owner }}/backend:latest
+          tags: ${{ github.repository_owner }}/backend:latest
