--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - master
 
-permissions:
-  packages: write
-  contents: read
-  
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -29,3 +25,5 @@ jobs:
           context: .
           push: true
           tags: ${{ github.repository_owner }}/backend:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
