--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,6 +31,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ github.repository_owner }}/backend:latest
+          tags: ghcr.io/${{ github.repository_owner }}/backend:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
