--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-flate2 = "1.1.8"
-tar = "0.4.44"
+hyper = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+http-body-util = "0.1"
+bytes = "1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+form_urlencoded = "1"
+http = "1"
+futures-util = { version = "0.3", default-features = false }
+tokio-util = "0.7.18"
+hyper-util = { version = "0.1.19", features = ["tokio"] }
