--- a/config.conf
+++ b/config.conf
@@ -1,4 +1,15 @@
 server {
+  ssl_certificate /etc/nginx/ssl/fullchain.pem;
+  ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+  listen 443 ssl;
+  server_name _ default_server;
+
+  root /var/www/html;
+  index index.html;
+
+}
+
+server {
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     listen 443 ssl;
@@ -11,18 +22,4 @@ server {
         proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto \$scheme;
     }
-}
-
-server {
-  ssl_certificate /etc/nginx/ssl/fullchain.pem;
-  ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-  listen 443 ssl;
-  server_name localhost;
-
-  root /var/www/html;
-  index index.html;
-
-  location / {
-    try_files $uri $uri/ /index.html;
-  }
 }
