--- a/config.conf
+++ b/config.conf
@@ -14,6 +14,8 @@ server {
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     listen 443 ssl;
     server_name ${API_URL};
+    ssl_client_certificate /etc/nginx/ssl/ca.pem;
+    ssl_verify_client on;
 
     location / {
         proxy_pass http://127.0.0.1:7878;
