--- a/config.conf
+++ b/config.conf
@@ -13,6 +13,9 @@ server {
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     listen 443 ssl;
+    limit_conn_zone $binary_remote_addr zone=addr:10m;
+    limit_conn addr 2;
+    client_max_body_size ${BODY_SIZE};
     server_name ${API_URL};
     ssl_client_certificate /etc/nginx/ssl/ca.pem;
     ssl_verify_client on;
