--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,9 +17,7 @@ on:
         required: true
         type: choice
         options:
-          - linux/amd64
-          - linux/arm64
-          - linux/amd64,linux/arm64
+          - 
 
 permissions:
   packages: write
@@ -51,6 +49,6 @@ jobs:
           context: .
           push: true
           platforms: ${{ inputs.platform }}
-          tags: ghcr.io/${{ github.repository_owner }}/backend:${{ inputs.tag }}
+          tags: ghcr.io/${{ github.repository }}:${{ inputs.tag }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
