I guess I accidentally removed some sutff

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,9 @@ on:
         required: true
         type: choice
         options:
-          - 
+          - linux/amd64
+          - linux/arm64
+          - linux/amd64,linux/arm64
 
 permissions:
   packages: write
