--- a/config.conf
+++ b/config.conf
@@ -13,7 +13,7 @@ server {
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     listen 443 ssl;
-    client_max_body_size 2000M;
+    client_max_body_size ${BODY_SIZE};
     server_name ${API_URL};
     ssl_client_certificate /etc/nginx/ssl/ca.pem;
     ssl_verify_client on;
