--- a/config.conf
+++ b/config.conf
@@ -1,3 +1,6 @@
+limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
+limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=5r/s;
+
 server {
   ssl_certificate /etc/nginx/ssl/fullchain.pem;
   ssl_certificate_key /etc/nginx/ssl/privkey.pem;
@@ -6,7 +9,10 @@ server {
 
   root /var/www/html;
   index index.html;
-
+  location / {
+    limit_conn conn_limit_per_ip 10;
+    limit_req zone=req_limit_per_ip burst=10 nodelay;
+  }
 }
 
 server {
@@ -19,10 +25,12 @@ server {
     ssl_verify_client on;
 
     location / {
-        proxy_pass http://127.0.0.1:7878;
-        proxy_set_header Host \$host;
-        proxy_set_header X-Real-IP \$remote_addr;
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto \$scheme;
+      limit_conn conn_limit_per_ip 10;
+      limit_req zone=req_limit_per_ip burst=10 nodelay;
+      proxy_pass http://127.0.0.1:7878;
+      proxy_set_header Host \$host;
+      proxy_set_header X-Real-IP \$remote_addr;
+      proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto \$scheme;
     }
 }
