--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,5 @@
-limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
-limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=5r/s;
+limit_conn_zone \$binary_remote_addr zone=conn_limit_per_ip:10m;
+limit_req_zone \$binary_remote_addr zone=req_limit_per_ip:10m rate=5r/s;
 
 server {
   ssl_certificate /etc/nginx/ssl/fullchain.pem;
