--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -6,7 +6,7 @@ COPY src ./src
 RUN cargo build --release 
 
 FROM nginx:alpine-slim
-RUN apk add --no-cache tini base64
+RUN apk add --no-cache tini base64 
 RUN rm -f /etc/nginx/conf.d/default.conf
 RUN mkdir /var/www/html -p
 RUN chown -R nginx:nginx /var/www
@@ -16,4 +16,4 @@ COPY docker-entrypoint.sh /
 COPY config.conf /config.conf
 ENV WEB_PATH=/var/www/html
 
-ENTRYPOINT ["/sbin/tini", "--", "/bin/ash", "/docker-entrypoint.sh"]
+ENTRYPOINT ["/sbin/tini", "--", "ash", "/docker-entrypoint.sh"]
