--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -53,6 +53,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          file: Dockerfile.debian
           platforms: ${{ inputs.platform }}
           tags: ghcr.io/${{ github.repository }}:debian
           cache-from: type=gha
