--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-hyper = { version = "1", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
+hyper = { version = "1", features = ["server", "http1", "http2"] }
+tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
 http-body-util = "0.1"
 bytes = "1"
 tokio-util = "0.7.18"
