--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -4,6 +4,8 @@ WORKDIR /app
 COPY Cargo.toml ./
 COPY src ./src
 RUN cargo build --release 
+RUN apk install --no-cache upx
+RUN upx --best --lzma target/release/backend
 
 FROM nginx:alpine-slim
 RUN apk add --no-cache tini base64 
